--- a/教程_笔记/6_ES6模块化教程.md
+++ b/教程_笔记/6_ES6模块化教程.md
@@ -1,22 +1,22 @@
 ## ES6-Babel-Browserify 使用教程
-1、 定义 package.json 文件
-  ```
-  {
-    "name": "es6_babel_browserify",
-    "version": "1.0.0"
-  }
-  ```
-2、 安装 babel-cli, babel-preset-es2015 和 browserify
+1. 定义 package.json 文件
+   ```
+   {
+     "name": "es6_babel_browserify",
+     "version": "1.0.0"
+   }
+   ```
+2. 安装 babel-cli, babel-preset-es2015 和 browserify
   * npm install babel-cli browserify -g
   * npm install babel-preset-es2015 --save-dev
   * preset 预设(将 es6 转换成 es5 的所有插件打包)
-3、 定义 .babelrc 文件
-	```
-        {
-          "presets": ["es2015"]
-        }
-	```
-4、 编码
+3. 定义 .babelrc 文件
+   ```
+   {
+     "presets": ["es2015"]
+   }
+   ```
+4. 编码
   * js/src/module1.js  分别暴露
     ```
     // 暴露模块 分别暴露
@@ -85,19 +85,19 @@
     fun2();
     module3.foo();
     ```
-5、 编译
+5. 编译
   * 使用 Babel 将 ES6 编译为 ES5 代码(但包含 CommonJS 语法) : babel js/src -d js/lib
   * 使用 Browserify 编译 js : browserify js/lib/app.js -o js/lib/bundle.js
 
-6、 页面中引入测试
-  ```
-  <script type="text/javascript" src="js/dist/bundle.js"></script>
-  ```
-7、 引入第三方模块(jQuery)
+6. 页面中引入测试
+    ```
+    <script type="text/javascript" src="js/dist/bundle.js"></script>
+    ```
+7. 引入第三方模块(jQuery)
   1) 下载 jQuery 模块: 
    * npm install jquery@1 --save
   2) 在 app.js 中引入并使用
-   ```
-   import $ from 'jquery'
-   $('body').css('background', 'red');
-   ```
+    ```
+    import $ from 'jquery'
+    $('body').css('background', 'red');
+    ```
